client history and changes
